test_programs/compile_failure/noirc_frontend_tests_resolve_for_expr/src/main.nr

        fn main(x : u64) {
            for i in 1..20 {
                let _z = x + i;
            };
        }
    